package chinesecheckers;

public interface IFileManager {
    public static void load(String filePath) {

    }
    public static void save(String filePath) {

    }
    public static String selectorWindow(String title, boolean save) {
        return null;
    }
}
